feat: 메뉴 추천 결과 출력 기능 구현